Loaded Oswald font for form

--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Load Oswald Font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
     <!-- Stylesheet -->
     <link rel="stylesheet" href="./CSS/styles.css">
     <title>Login UI</title>
@@ -13,12 +17,10 @@
         <form id="login-form" action="#" method="get">
             <h1 class="welcome-heading">Welcome Back</h1>
             <p class="welcome-message">Please enter your details.</p>
-            <label for="email">Email
-                <input type="email" name="email" id="email">
-            </label>
-            <label for="password">Password
-                <input type="password" name="password" id="password">
-            </label>
+            <label for="email">Email</label>
+            <input type="email" name="email" id="email">
+            <label for="password">Password</label>
+            <input type="password" name="password" id="password">
             <div class="more-options">
                 <label for="thirty-day-save">
                     <input type="checkbox" name="thirty-day-save" id="thirty-day-save">
