--- a/index.html
+++ b/index.html
@@ -15,20 +15,21 @@
     <main>
         <!-- Start of Login Form -->
         <form id="login-form" action="#" method="get">
-            <h1 class="welcome-heading">Welcome Back</h1>
-            <p class="welcome-message">Please enter your details.</p>
-            <label for="email">Email</label>
-            <input type="email" name="email" id="email">
+            <div id="welcome">
+                <h1 class="welcome-heading">Welcome Back</h1>
+                <p class="welcome-message">Please enter your details.</p>
+            </div>
+            <label for="username">Email</label>
+            <input type="email" name="username" id="username" placeholder="Username">
             <label for="password">Password</label>
-            <input type="password" name="password" id="password">
+            <input type="password" name="password" id="password" placeholder="Password">
             <div class="more-options">
                 <label for="thirty-day-save">
-                    <input type="checkbox" name="thirty-day-save" id="thirty-day-save">
-                    Remember for 30 days
+                    <input type="checkbox" name="thirty-day-save" id="thirty-day-save"> Remember for 30 days
                 </label>
                 <a id="account-recovery" href="#">Forgot password?</a>
             </div>
-            <button id="submit-button" type="submit">Log in</button>
+            <button id="submit-button" type="submit">Sign in</button>
         </form>
         <!-- End of Login Form -->
     </main>
