updated email label to username

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
                 <h1 class="welcome-heading">Welcome Back</h1>
                 <p class="welcome-message">Please enter your details.</p>
             </div>
-            <label for="username">Email</label>
-            <input type="email" name="username" id="username" placeholder="Username">
+            <label for="username">Username</label>
+            <input type="text" name="username" id="username" placeholder="Username">
             <label for="password">Password</label>
             <input type="password" name="password" id="password" placeholder="Password">
             <div class="more-options">
